# SevenSegDHT-attiny861

./: CMakeLists.txt  README.md
lib/: SimpleDHT-AVR.cpp  SimpleDHT-AVR.h
src/: DHT_AVR.cpp  DHT_AVR.h  SevenSeg.cpp  SevenSeg.h  SimpleDHT.cpp  SimpleDHT.h  TRISevenSeg.cpp  TRISevenSeg.h  main.cpp
